[package]
name = "bitos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"
pic8259 = "0.10.0"
pc-keyboard = "0.5.0"
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# exit qemu from guest system
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33   


[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "should_panic"
harness = false


